# UnknownEngine

./: .gitignore  .travis.yml  CMakeLists.txt  CodingStandards.cpp  README.md
Diagram/: ClassDiagram.asta
diagram/: ClassDiagram.asta
include/unk/: SDLInit.h  Unknown.h
include/unk/core/: RenderOptions.h  Renderer.h  Resources.h  SDLConverter.h  SDLFlagConverter.h  SDLRenderer.h  SDLResources.h  SDLWindow.h  TextureInfo.h  Window.h
include/unk/utils/: Color.h  Point.h  Rect.h  SDLException.h  UnkExceptions.h
lib/: CMakeLists.txt  SDLInit.cpp
lib/core/: CMakeLists.txt  RenderOptions.cpp  Renderer.cpp  Resources.cpp  SDLConverter.cpp  SDLRenderer.cpp  SDLResources.cpp  SDLWindow.cpp  TextureInfo.cpp  Window.cpp  WindowSDL.cpp
lib/utils/: CMakeLists.txt  Color.cpp  Point.cpp  Rect.cpp  SDLException.cpp  UnkExceptions.cpp
scripts/: install.sh
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  TextureInfoTest.cpp
tests/utils/: CMakeLists.txt  ColorTest.cpp  PointTest.cpp  RectTest.cpp  SDLExceptionTest.cpp
